# linkedin-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: linkedin-agent.yml
config/: settings.py
github/workflows/: linkedin-agent.yml
src/: main.py
src/analytics/: analytics.py
src/content/: image_generator.py  research.py  writer.py
src/poster/: linkedin_poster.py
src/scheduler/: scheduler.py
src/storage/: database.py  models.py
tests/: test_content_generation.py
