[project]
name = "linkedin-agent"
version = "0.1.0"
description = "Autonomous LinkedIn Content Automation Agent for Abhinav Jha"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "apscheduler>=3.10.4",
    "playwright>=1.40.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiofiles>=23.2.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "openai>=1.12.0",
    "groq>=0.5.0",
    "ddgs>=9.0.0",
    "feedparser>=6.0.10",
    "pyotp>=2.9.0",
    "pytz>=2024.0",
    "aiosqlite>=0.20.0",
    "huggingface_hub>=0.20.0",
]

[project.scripts]
linkedin-agent = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
